# ROB498

./: .gitignore  Dockerfile  README.md  compose.yaml  requirements.txt
flight_club/: CMakeLists.txt  package.xml
flight_club/launch/: combined_launch.py  real_launch.py  real_vel_control_launch.py  sim_launch.py  vel_launch.py  vel_launch_real.py
flight_club/msg/: TrajectoryPlan.msg
flight_club/src/: planner.py  pose_comparator.py  velocity_control.py  vicon.py  vicon_to_cam.py  visualizer.py  visualizer.py.bak  visualizer_v2c.py  waypoint_publisher.py
flight_club/src/exercise2/: exercise2.py  mavros_arm_example.py  realsense.py  vicon_node.py
flight_club/src/exercise3/: exercise3.py  planner.py  velocity_control.py  velocity_controll.py
flight_club/src/hiding/: hiding.py  occlusion_mapping.py  occlusion_visualizer.py  raycaster.py  seeker_position.py  test.py
path_planning_utils/: CMakeLists.txt  package.xml  setup.py
path_planning_utils/path_planning_utils/: path_generation.py  plotting.py  point_mass_trajectory_optimization.py  trajectory_computations.py  velocity_generation.py
path_planning_utils/path_planning_utils/config/: planning_params.yaml
simulation/: package.xml
simulation/launch/: occlusion_launcher.py
simulation/models/soldier/: model.config  model.sdf
simulation/src/: occlusion_mapping.py  occlusion_visualizer.py  raycaster.py  seeker_position.py
simulation/worlds/: easy.sdf
