<package format="3">
  <name>gazebo_occlusion</name>
  <version>0.1.0</version>
  <description>3D Occlusion Detection in Gazebo using Raycasting</description>
  <maintainer email="ismail.ouazzani@mail.utoronto.ca">Ismail Ouazzani Chahdi</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
